<resources>
    <string name="app_name">LoyaltyCard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmet_bank_card">Bank cards</string>
    <string name="fragment_discount_card">Discount cards</string>
    <string name="bank_cards">Bank cards</string>
    <string name="discount_cards">Discount cards</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card number</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="bank_card_name">Card Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_card_number">Number</string>
    <string name="bank_card_date">Date</string>
    <string name="bank_card_pin">PIN</string>
    <string name="bank_card_cvv">CVV</string>
    <string name="bank_card_holder">Card Holder</string>
    <string name="save">Save</string>
    <string name="add_card_fragment_name">Add card</string>
    <string name="month_year">MONTH/YEAR</string>
    <string name="valid_nthru">VALID\nTHRU</string>
    <string name="cvv">CVV:</string>
    <string name="pin">PIN:</string>
    <string name="rotate_card">Rotate card</string>
    <string name="card_chip">Card chip</string>
</resources>