<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/general_nav"
    app:startDestination="@id/bankCardFragment">

    <fragment
        android:id="@+id/bankCardFragment"
        android:name="com.example.loyaltycard.fragments.bankCard.BankCardFragment"
        android:label="@string/fragmet_bank_card"
        tools:layout="@layout/fragment_bank_card" >
        <action
            android:id="@+id/action_bankCardFragment_to_addBankCardFragment"
            app:destination="@id/addBankCardFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/discountCardFragment"
        android:name="com.example.loyaltycard.fragments.discountCard.DiscountCardFragment"
        android:label="@string/fragment_discount_card"
        tools:layout="@layout/fragment_discount_card" >
        <action
            android:id="@+id/action_discountCardFragment_to_addDiscountCardFragment"
            app:destination="@id/addDiscountCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/addDiscountCardFragment"
        android:name="com.example.loyaltycard.fragments.addDiscountCard.AddDiscountCardFragment"
        android:label="@string/create"
        tools:layout="@layout/fragment_add_discount_card" />
    <fragment
        android:id="@+id/addBankCardFragment"
        android:name="com.example.loyaltycard.fragments.addBankCard.AddBankCardFragment"
        android:label="@string/add_card_fragment_name"
        tools:layout="@layout/fragment_add_bank_card" >
        <action
            android:id="@+id/action_addBankCardFragment_to_bankCardFragment"
            app:destination="@id/bankCardFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
</navigation>