<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bankCard"
            type="com.example.loyaltycard.data.models.BankCard" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@{bankCard.cardName}"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="Card Name" />


        <LinearLayout
            android:id="@+id/card_front"
            android:background="@drawable/bank_card_backgroud"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/bankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"
                    android:text="@{bankCard.bankName}"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Bank Name" />


                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/rotateFront"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/rotate_card"
                    app:srcCompat="@drawable/ic_rotate"
                    app:tint="@color/white" />
            </LinearLayout>

            <ImageView
                android:id="@+id/card_chip"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                app:srcCompat="@drawable/card_chip"
                android:contentDescription="@string/card_chip" />

            <TextView
                android:id="@+id/cardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@{bankCard.number}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:text="1234   5678   9875   4321" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/validThru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:text="@string/valid_nthru"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

                <TextView
                    android:id="@+id/cardDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{bankCard.date}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="03/25" />
            </LinearLayout>

            <TextView
                android:id="@+id/cardHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:maxLines="1"
                android:text="@{bankCard.cardHolder}"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="CARDHOLDER" />
        </LinearLayout>

    </LinearLayout>
</layout>